# emergent-trading-language

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  experiment_proposal.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
AccessGuard-GRC-RBAC-Dashboard/: compliance.html  register.html  risk-register.html  users.html
AccessGuard-GRC-RBAC-Dashboard/js/: app.js
AccessGuard-Pro/backend/: .env.example  package-lock.json  package.json  server.js
AccessGuard-Pro/backend/config/: db.js
AccessGuard-Pro/backend/controllers/: authController.js
AccessGuard-Pro/backend/database/: schema.sql
AccessGuard-Pro/backend/middleware/: authMiddleware.js  errorMiddleware.js  notFoundMiddleware.js  rateLimitMiddleware.js  validateMiddleware.js
AccessGuard-Pro/backend/routes/: authRoutes.js  healthRoutes.js
AccessGuard-Pro/frontend/: audit-log.html  dashboard.html  index.html
agents/: __init__.py  agent.py
analysis/: __init__.py  compare_runs.py  entropy.py  plot_training.py  probing.py  topsim.py  umap_viz.py  verify.py
docs/: ARCHITECTURE.md  CURRENT_RESULTS.md  DEMO.md  EXPERIMENT_PROTOCOL.md
env/: __init__.py  baseline.py  trading_env.py
scripts/: check_project.ps1  run_seed_sweep.ps1
tests/: test_agent_architecture.py  test_checkpoints.py  test_compare_runs.py  test_curriculum.py  test_entropy.py  test_logger.py  test_main_cli.py  test_plot_training.py  test_probing.py  test_status.py  test_topsim.py  test_trading_env.py  test_training_resume.py  test_training_semantics.py  test_umap_viz.py  test_verify_controls.py
training/: __init__.py  curriculum.py  train.py
utils/: checkpoints.py  logger.py  status.py
(+4 files in other folders)
