[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-trading-language"
version = "0.1.0"
description = "Emergent discrete communication for cooperative multi-agent resource trading"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RAUNAK-733" }]
dependencies = [
  "torch",
  "numpy",
  "scipy",
  "scikit-learn",
  "umap-learn",
  "matplotlib",
  "seaborn",
]

[project.urls]
Repository = "https://github.com/RAUNAK-733/emergent-trading-language"

[tool.setuptools.packages.find]
include = ["agents*", "analysis*", "env*", "training*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
