[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-trading-language"
version = "0.1.0"
description = "Emergent discrete communication for cooperative multi-agent resource trading"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RAUNAK-733" }]
dependencies = [
  "torch",
  "numpy",
  "scipy",
  "scikit-learn",
  "umap-learn",
  "matplotlib",
  "seaborn",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Repository = "https://github.com/RAUNAK-733/emergent-trading-language"
Issues = "https://github.com/RAUNAK-733/emergent-trading-language/issues"
Changelog = "https://github.com/RAUNAK-733/emergent-trading-language/blob/master/CHANGELOG.md"
Documentation = "https://github.com/RAUNAK-733/emergent-trading-language/tree/master/docs"

[tool.setuptools.packages.find]
include = ["agents*", "analysis*", "env*", "training*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
